FirstComment Nouma Api data To Detail Screen Set

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NoumanProject",
+  "name": "batch3training",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,12 +12,12 @@
   "dependencies": {
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/native": "^7.1.14",
-    "@react-navigation/native-stack": "^7.3.21",
-    "expo": "^53.0.19",
+    "@react-navigation/stack": "^7.4.2",
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
