--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,7 +14,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'NoumanProject' do
+target 'batch3training' do
   config = use_native_modules!
 
   use_react_native!(
