--- a/ios/batch3training.xcodeproj/xcshareddata/xcschemes/batch3training.xcscheme
+++ b/ios/batch3training.xcodeproj/xcshareddata/xcschemes/batch3training.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "NoumanProject.app"
-               BlueprintName = "NoumanProject"
-               ReferencedContainer = "container:NoumanProject.xcodeproj">
+               BuildableName = "batch3training.app"
+               BlueprintName = "batch3training"
+               ReferencedContainer = "container:batch3training.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "NoumanProjectTests.xctest"
-               BlueprintName = "NoumanProjectTests"
-               ReferencedContainer = "container:NoumanProject.xcodeproj">
+               BuildableName = "batch3trainingTests.xctest"
+               BlueprintName = "batch3trainingTests"
+               ReferencedContainer = "container:batch3training.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "NoumanProject.app"
-            BlueprintName = "NoumanProject"
-            ReferencedContainer = "container:NoumanProject.xcodeproj">
+            BuildableName = "batch3training.app"
+            BlueprintName = "batch3training"
+            ReferencedContainer = "container:batch3training.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "NoumanProject.app"
-            BlueprintName = "NoumanProject"
-            ReferencedContainer = "container:NoumanProject.xcodeproj">
+            BuildableName = "batch3training.app"
+            BlueprintName = "batch3training"
+            ReferencedContainer = "container:batch3training.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
